# my-python-template

./: .env  README.md  copier.yml  justfile  pyproject.toml  requirements-dev.in
