[tool.poetry]
name = {{module_name}}
description = ""
version = "0.0.0"
authors = ["jgart <jgart@dismail.de>"]

[tool.poetry.dependencies]
typer = "*"
rich = "*"

[tool.poetry.scripts]
{{module_name}} = "{{module_name}}:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
